--- a/InstaHub-MVC/InstaHub-MVC/appsettings.json
+++ b/InstaHub-MVC/InstaHub-MVC/appsettings.json
@@ -1,8 +1,22 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://*:3000"
+      }
+    }
+  },
+  "Auth0": {
+    "Domain": "instahub.auth0.com",
+    "ClientId": "_PI6Pppuo25Bqu3gAEocuHNRvo-8CDol",
+    "ClientSecret": "AIcf9hgEt3WUnswn8kO13rTvVFR4JgxFbtA5z_mZnXy_8jBYnUhp9wKvurBRoTms"
+  }
 }
