--- a/InstaHub-FrontEnd/InstaHub-FrontEnd/ClientApp/package.json
+++ b/InstaHub-FrontEnd/InstaHub-FrontEnd/ClientApp/package.json
@@ -6,6 +6,7 @@
     "@aspnet/signalr": "^1.1.2",
     "bootstrap": "^4.1.3",
     "jquery": "3.3.1",
+    "moment": "^2.24.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
